kubernetes/aks_5_service_mesh/part_2_calico/examples/network_policies/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: dgraph
      component: alpha
  policyTypes:
    - Ingress
  ingress:
    - from:
       # kubectl label namespace dgraph-client name=dgraph-client
        - namespaceSelector:
            matchLabels:
              name: dgraph-client
      ports:
        - port: 8080
        - port: 9080
